force-app/main/default/objects/OpportunityTrackingHistory__c/OpportunityTrackingHistory__c.object-meta.xml
<CustomObject>
    <label>OpportunityTrackingHistory</label>
    <nameField>
        <label>OpportunityTrackingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityTrackingHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>