force-app/main/default/objects/OpportunityTrackingHistory__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>APIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>