force-app/main/default/objects/OpportunityTrackingHistory__c/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <label>ChangedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>