force-app/main/default/objects/OpportunityTrackingHistory__c/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <formula>if(OR(NewValue__c = &apos;Closed Lost&apos; , NewValue__c = &apos;Closed Won&apos;),(Opportunity__r.CloseDate  - DATEVALUE( Last_Date__c )),(TODAY() - DATEVALUE( Last_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>